@@ -6,8 +6,9 @@ xp-maven-plugin (3.1.6)
   * Include on-the-fly generated "META-INF/manifest.ini" in output artifact
   * Use org.codehaus.plexus.archiver.Archiver.addFileSet() instead of the deprecated addDirectory()
   * Update examples in "examples" directory
+  * Application directories (webapp, config, xsl) now copied to ${outputDirectory} during the "compile" phase
 
- -- Marius Rosoiu <marius.rosoiu@1and1.ro> Thu, 11 Oct 2012
+ -- Marius Rosoiu <marius.rosoiu@1and1.ro> Thu, 18 Oct 2012
 
 xp-maven-plugin (3.1.5)
 
